mobile layout modified. text align center

--- a/lab2.html
+++ b/lab2.html
@@ -21,14 +21,17 @@
               .first 
                 {
                     order: 1;
+                    text-align: center;
                 }
               .second 
                 {
                     order: 3;
+                    text-align: center;
                 }
                .third 
                 {
                     order: 2;
+                    text-align: center;
                 }
            }
         </style>
